--- a/index.html
+++ b/index.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title> My Personal webpage 🔷</title>
-    </head>
-    <body>
-        <h1> This is a h1 heading</h1>
-        <p><em>This is a practice session to build the html webpage</em></p>
-        <p> <a href="#">This is the next paragraph.</a></p>
-        <hr size="3" noshade="">
-        <h3> Books </h3>
-        <ul>
-            <li>ios developer</li>
-            <li>Software developer</li>
-            <ul>
-                <li>java developer</li>
-                <li>.Net Developer</li>
-            </ul>
-        </ul>
-        <hr size="3" noshade="">
-        <h3>Education</h3>
-        <table>
-            <thead>
-                <th>Year</th>
-                <th>Work</th>
-            </thead>
-            <tbody>
-            <tr>
-                <td>2017-2021</td>
-                <td>Undergraduation</td>
-            </tr>
-            <tr>
-                <td>2021-2023</td>
-                <td>Graduation</td>
-            </tr>
-            </tbody>
-        </table>
-        <hr size="3" noshade="">
-        
-       <strong><a href="hobbies.html">My hobbies</a></strong>
-       <hr size="3" noshade="">
-       <h3>Skills</h3>
-       <table cellspacing="10">
-        <thead>
-            <tr>
-                <th>Domain</th>
-                <th>Knowledge on a scale of 1-5</th>
-            </tr>
-        </thead>
-        <tr>
-            <td>Java</td>
-            <td>✩✩✩✩✩</td>
-        </tr>
-       </table>
-       <hr size="3" noshade="">
-       <p><a href="contact-me.html">Contact Me</a></p>
-       </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Angela Yu</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+  <link rel="icon" href="favicon.ico">
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="cloud.png" alt="cloud">
+    <div class="title-text">
+      <h1>I'm Angela.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
+    </div>
+    <img class="bottom-cloud" src="cloud.png" alt="cloud">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="angela.png" alt="angela-profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I ❤️ coffee and brew my own beers.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="https://media.giphy.com/media/3p50WGyUqeU5W/giphy.gif" alt="code-img">
+
+        <h3>Design & Development</h3>
+        <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
+
+      </div>
+      <div class="skill-row">
+        <img class="chilli-img" src="chillies.png" alt="chillies-img">
+
+        <h3>Hot Wings Challenge</h3>
+        <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love hot wings as much as I do.</h3>
+      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+      <a class="btn" href="mailto:ilove@hotwings.com">CONTACT ME</a>
+    </div>
+  </div>
 
 
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/angela-yu-963a584b/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/yu_angela">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2018 Angela Yu @ The App Brewery.</p>
+  </div>
+</body>
 
 </html>
